update profile navbar

--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
                 </ul>
             </div>
 
-            <div class="hidden lg:flex gap-4">
+            <!-- <div class="hidden lg:flex gap-4">
                 <button class="nav-link">Sign In</button>
                 <button class="btn"><span>Sign Up</span></button>
+            </div> -->
+
+            <div class="pl-20 justify-start">
+                <img src="assets/img/developer2.png" alt="profile_image" class="border-4 border-white hover:border-yellow-400 rounded-full h-12 cursor-pointer duration-300">
             </div>
 
             <div class="text-xl sm:text-3xl cursor-pointer z-50 lg:hidden">
